prompt compatibility cleanup
closes #1
